@@ -1,5 +1,11 @@
 2006-02-06  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-main.c: (main):
+
+	Fix handling of non-ascii extra arguments.
+
+2006-02-06  Christian Persch  <chpe@cvs.gnome.org>
+
         * m4/gecko.m4:
 	
 	More xulrunner fixes.
